# DRF-CinemaTickets

./: .gitignore  README.md  pyproject.toml
project/: settings.py  urls.py
tickets/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_post.py
